feat: add payment integration with Xendit

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,25 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 # Get from: https://console.cloud.google.com/
 VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
+# ===== PAYMENT (Xendit) =====
+# These are set in Supabase Edge Functions, not here
+# Use: supabase secrets set XENDIT_SECRET_KEY=xxx
+
+# For local testing, you can use Xendit test keys:
+# Test secret key format: xnd_development_xxx
+# Test public key format: xnd_public_development_xxx
+
+# ===== AFFILIATE PARTNERS =====
+# Traveloka Affiliate
+VITE_TRAVELOKA_AFFILIATE_ID=your_traveloka_affiliate_id
+
+# Tiket.com Affiliate
+VITE_TIKETCOM_AFFILIATE_ID=your_tiketcom_affiliate_id
+
 # Instructions:
 # 1. Copy this file to .env
 # 2. Replace all values with your actual keys
 # 3. Never commit .env to Git!
+# 4. For Xendit: Set secrets in Supabase CLI:
+#    supabase secrets set XENDIT_SECRET_KEY=xnd_development_xxx
+#    supabase secrets set XENDIT_WEBHOOK_TOKEN=xxx
