🚀 Major Update: Dashboard Enhancement + Legal Pages + Affiliate Landing + Mobile Optimization
✨ New Features:
- DestinationDetailView: Immersive AI-powered trip planner modal
- 80+ destinations across 8 categories (hidden gems, beach, culinary, etc.)
- 'Saya Kepo!' CTA button with glassmorphism
- 3-row horizontal scroll layout
- Category filtering system

📄 Legal Pages:
- About Us page
- Cookie Policy
- GDPR Compliance
- Affiliate Landing Page
- Scroll-to-Top button

📱 Mobile Optimization:
- Touch-friendly 44px tap targets
- iOS zoom prevention
- Safe area insets for notched phones
- Reduced motion support
- Desktop-only custom cursor

🔒 Security:
- Enhanced .gitignore for sensitive files
- CSP headers in Netlify config
- API keys properly protected

🎨 UI/UX:
- ContextualHero component
- ScrollReveal animations
- Premium dashboard overhaul

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,18 @@ VITE_API_KEY=your_gemini_api_key_here
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# Google Maps API Key (Optional - for real-time route tracking)
+# Google Maps API Key (for route tracking & Places Photos)
 # Get from: https://console.cloud.google.com/
+# Enable: Places API, Maps JavaScript API, Places Photo API
 VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# ===== CLOUDINARY (Media Storage) =====
+# Get from: https://cloudinary.com/console
+# 1. Sign up for free (25GB storage)
+# 2. Go to Dashboard, copy Cloud Name
+# 3. Go to Settings > Upload > Add Upload Preset (Unsigned)
+VITE_CLOUDINARY_CLOUD_NAME=da7gyfuyd
+VITE_CLOUDINARY_UPLOAD_PRESET=nusantarago_upload
 
 # ===== PAYMENT (Xendit) =====
 # These are set in Supabase Edge Functions, not here
