feat: Add Google Search Grounding to Vertex AI + Transform NusaVerse to Nusa Guide VR with guided tours, cultural hotspots, achievements, and progress tracking

--- a/.env.example
+++ b/.env.example
@@ -20,13 +20,19 @@ VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 VITE_CLOUDINARY_CLOUD_NAME=da7gyfuyd
 VITE_CLOUDINARY_UPLOAD_PRESET=nusantarago_upload
 
-# ===== PAYMENT (Xendit) =====
-# These are set in Supabase Edge Functions, not here
-# Use: supabase secrets set XENDIT_SECRET_KEY=xxx
+# ===== PAYMENT (Midtrans) =====
+# Get from: https://dashboard.midtrans.com > Settings > Access Keys
+# For sandbox testing, use sandbox keys
+# For production, use production keys
 
-# For local testing, you can use Xendit test keys:
-# Test secret key format: xnd_development_xxx
-# Test public key format: xnd_public_development_xxx
+# Client Key (safe for frontend)
+VITE_MIDTRANS_CLIENT_KEY=SB-Mid-client-xxxx
+# Set to 'true' for production
+VITE_MIDTRANS_PRODUCTION=false
+
+# Server Key (set in Supabase Edge Functions only!)
+# Use: supabase secrets set MIDTRANS_SERVER_KEY=SB-Mid-server-xxxx
+# Use: supabase secrets set MIDTRANS_PRODUCTION=false
 
 # ===== AFFILIATE PARTNERS =====
 # Traveloka Affiliate
@@ -34,6 +40,15 @@ VITE_TRAVELOKA_AFFILIATE_ID=your_traveloka_affiliate_id
 
 # Tiket.com Affiliate
 VITE_TIKETCOM_AFFILIATE_ID=your_tiketcom_affiliate_id
+
+# ===== VERTEX AI (Personalization) =====
+# Get from: https://console.cloud.google.com
+# 1. Create project & enable Vertex AI API
+# 2. Create Service Account with Vertex AI User role
+# 3. For Edge Functions: supabase secrets set VERTEX_AI_CREDENTIALS='{"type":"service_account",...}'
+
+VITE_VERTEX_AI_PROJECT_ID=your_project_id
+VITE_VERTEX_AI_LOCATION=us-central1
 
 # Instructions:
 # 1. Copy this file to .env
